# xva-calculator

./: .gitignore  README.md  cours_xva_complet.tex  presentation_complete.tex  presentation_xva.tex  pyproject.toml  requirements.txt  script_partie1.tex
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/: curves.yaml  hazards.yaml  portfolio.yaml  sample_fx_data.csv  sample_ir_data.csv
examples/: run_demo.py
notebooks/: 05_Full_Demo.ipynb
tests/: conftest.py  test_exposure.py  test_instruments.py  test_market.py  test_saccr.py  test_xva.py
xva_app/: __init__.py  app.py
xva_core/: __init__.py  _types.py
xva_core/collateral/: __init__.py  im.py  vm.py
xva_core/config/: __init__.py  loader.py  models.py
xva_core/exposure/: __init__.py  metrics.py  netting.py  simulator.py
xva_core/instruments/: __init__.py  base.py  fxforward.py  irs.py
xva_core/market/: __init__.py  correlation.py  curve.py  fx_model.py  hazard.py  ir_model.py
xva_core/reg/: __init__.py  saccr.py
xva_core/reporting/: __init__.py  export.py  plots.py  tables.py
xva_core/xva/: __init__.py  cva.py  dva.py  fva.py  kva.py  mva.py  result.py
